# bit-matrix

./: .gitignore  .gitmodules  README.md  partitions.csv  platformio.ini
data/: index.html
legacy/rpi/: .gitignore  CMakeLists.txt  clean.sh  run.sh
legacy/rpi/source/: CMakeLists.txt  Canvas.cpp  Canvas.h  MAX7219Chain.cpp  MAX7219Chain.h  MAX7219Matrix.cpp  MAX7219Matrix.h  MAX7219Universe.cpp  MAX7219Universe.h  SerialChain.cpp  SerialChain.h  SerialDevice.cpp  SerialDevice.h  SerialUniverse.cpp  SerialUniverse.h  app.h  main.cpp
src/: ApiServer.cpp  ApiServer.h  Application.cpp  Application.h  Fonts.cpp  Fonts.h  MatrixPlayer.cpp  MatrixPlayer.h  MidiBeatEffect.cpp  MidiBeatEffect.h  MidiEffect.cpp  MidiEffect.h  MidiTiming.cpp  MidiTiming.h  app.h  main.cpp  main.cpp.old
src/effects/: AnimationEffect.cpp  AnimationEffect.h  BigEffect.cpp  BigEffect.h  Index.cpp  Index.h  IndexEffect.cpp  IndexEffect.h  Lines.cpp  Lines.h  MidiBeatEffect.cpp  MidiBeatEffect.h  MidiEffect.cpp  MidiEffect.h  ParticleEffect.cpp  ParticleEffect.h  ShapeEffect.cpp  ShapeEffect.h  Spiral.cpp  Spiral.h  StaticKeyEffect.cpp  StaticKeyEffect.h  TestBrightnessEffect.cpp  TestBrightnessEffect.h  TestPatternEffect.cpp  TestPatternEffect.h  TextEffect.cpp  TextEffect.h
tools/FontConverter/: index.js  package-lock.json  package.json
